--- a/src/css/menu-options.css
+++ b/src/css/menu-options.css
@@ -1,8 +1,3 @@
-.theme-dark {
-  /* background: rgb(66, 66, 66); */
-  filter: invert(0.8);
-}
-
 .menu-modal {
   width: 220px;
   height: 100%;
